--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: python
 python:
   - '3.5'
 install: "pip install -r requirements.txt && pip install ."
-script: pytest
+script: pytest -m "not backend"
