--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
+sudo: false
 language: python
-python:
-  - '3.5'
-install: "pip install -r requirements.txt && pip install ."
-script: pytest -m "not backend"
+services:
+  - docker
+
+before_install:
+  - docker build -t sqlwhat .
+
+script: docker run sqlwhat make clean test
