--- a/antlr_plsql/tests/v0.3.yml
+++ b/antlr_plsql/tests/v0.3.yml
@@ -9,4 +9,9 @@ code:
         - "y JOIN (a JOIN b ON id = id) ON XXX = XXX"
         # Note: partition included on JoinExpr but currently unshaped
         - "y PARTITION BY (yid) JOIN x PARTITION BY (xid) USING acolumn"
+    subquery:
+        - "SELECT x FROM y UNION SELECT m FROM n"
+        - "SELECT x FROM y UNION SELECT m FROM n ORDER BY id"
+        - "(SELECT x FROM y ORDER BY id) UNION (SELECT m FROM n ORDER BY id2)"
+        - "(SELECT a FROM b ORDER BY id1) UNION (SELECT x FROM y ORDER BY id2) ORDER BY id3"
 
