grammar - allow UNION, EXCEPT etc to be followed by ALL

--- a/antlr_plsql/tests/v0.3.yml
+++ b/antlr_plsql/tests/v0.3.yml
@@ -12,7 +12,9 @@ code:
     subquery:
         - "SELECT x FROM y UNION SELECT m FROM n"
         - "SELECT x FROM y EXCEPT SELECT m FROM n"
+        - "SELECT x FROM y EXCEPT ALL SELECT m FROM n"
         - "SELECT x FROM y UNION SELECT m FROM n ORDER BY id"
         - "(SELECT x FROM y ORDER BY id) UNION (SELECT m FROM n ORDER BY id2)"
         - "(SELECT a FROM b ORDER BY id1) UNION (SELECT x FROM y ORDER BY id2) ORDER BY id3"
+        - "SELECT 1 UNION (SELECT 2 UNION SELECT 3) ORDER BY id"
 
