speaker - fix default wording for clauses

--- a/antlr_plsql/speaker.yml
+++ b/antlr_plsql/speaker.yml
@@ -17,3 +17,13 @@ fields:
     target_list: 'target list'
     expr: 'expression'
     op: 'operator'
+    order_by_clause: '`ORDER BY` clause'
+    into_clause: '`INTO` clause'
+    from_clause: '`FROM` clause'
+    where_clause: '`WHERE` clause'
+    group_by_clause: '`GROUP BY` clause'
+    having_clause: '`HAVING` clause'
+    model_clause: '`MODEL` clause'
+    for_update_clause: '`FOR UPDATE` clause'
+    limit_clause: '`LIMIT` clause'
+    over_clause: '`OVER` clause'
