--- a/antlr_plsql/tests/v0.5.yml
+++ b/antlr_plsql/tests/v0.5.yml
@@ -5,3 +5,4 @@ code:
         - "SELECT date FROM a"
         - "SELECT size FROM a"      # size keyword as column id
         - "SELECT a FROM bee AS b"  # table alias using "AS"
+        - "SELECT a INTO b, c FROM d"  # shaping of INTO clause (before was unshaped)
