add js/index.js again, ignore others

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,7 @@ tests/.DS_Store
 
 # Custom stuff ------------
 tests/dump_*.yml
+antlr_plsql/js/*
+!antlr_plsql/js/index.js
+antlr_plsql/plsql*.py
+antlr_plsql/plsql*.tokens
