Execute more tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,7 @@
 [pytest]
 addopts = -m "not examples"
+
+# TODO: awaiting PR
+# https://github.com/RKrahl/pytest-dependency/pull/25
+filterwarnings =
+    ignore::DeprecationWarning
